# audience-engine

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  PIPELINES.md  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_v0.1.0.md  RUNBOOK.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  integration-smoke.yml
docs/: ARCHITECTURE_V3.md  AUDIT.md  BENCHMARKS.md  BUILD_PLAN.md  CURSOR_WORKFLOW.md  DEPLOYMENT.md  DEVELOPMENT.md  DOCS_BUNDLE.md  GAP_REPORT_ARCH_VS_REPO.md  GOVERNANCE.md  INDEX.md  INDEX_LIFECYCLE.md  POLICY_ENGINE_SPEC.md  REPO_MANIFEST.md  RUNBOOK.md  SCALE_10M.md  TESTING.md
governance/contracts/: feature_mart.yaml  raw.yaml
governance/dictionaries/: reason_codes.yaml
governance/features/: feature_registry.yaml
governance/policies/: policy_registry.yaml
infra/: .env.example  docker-compose.dev.yml  docker-compose.yml
infra/monitoring/: prometheus.yml
pipelines/: version_bundle.py
pipelines/airflow_dags/: audience_engine_dags.py
pipelines/minimal_slice/: __init__.py  benchmark_harness.py  config.py  embedding.py  exporter.py  feature_mart.py  gpu_guard.py  metrics.py  policy_engine.py  qdrant_index.py  retrieval.py  run_flow.py  storage.py  synthetic_data.py
scripts/: run_minimal_slice.ps1  start_retrieval_api.ps1
services/retrieval_api/: __init__.py  app.py
tests/contracts/: test_governance_contracts.py
tests/integration/: test_minimal_slice_smoke.py  test_retrieval_api_smoke.py
tests/unit/: test_gpu_guard.py  test_policy_engine.py  test_qdrant_index_upserts.py  test_qdrant_point_ids.py  (+1 more)
(+8 files in other folders)
